@@ -1,3 +1,9 @@
+2010-04-13  Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V00-17-17
+	* moved some msgq-related classes here for common use 
+	* reworked Vulture interface 
+	
 2010-03-25  Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V00-17-14
